syntax = "proto3";

package internal.v1;

import "address/v1/address.proto";

option go_package = "github.com/tochemey/goakt/internal/v1;internalpb";

// WireActor represents the actor information on the wire.
message WireActor {
  // Specifies the actor name.
  // The actor name can be either the actor FQN or an alias
  string actor_name = 1;
  // Specifies the actor address
  address.v1.Address actor_address = 2;
  // Specifies the actor full path
  string actor_path = 3;
}
